--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+mvnw
+mvnw.cmd
+src\main\java\ru\petrov\fullRestAPI\repository\Zxc.java
+
+
 ### STS ###
 .apt_generated
 .classpath
